Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignObjectIntObjField.quorum
class Main
    Object v = Test()
    action Main
        Integer var = cast(Integer, v)
        if var:GetValue() = 5
            output "passed"
        end
    end

    action Test() returns Object
        Integer var
        var:SetValue(5)
        return var
    end
end