Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberIntObjField.quorum
class Main
    number v = Test()
    action Main
    end

    action Test() returns number
        Integer var
        var:SetValue(5)
        return var
    end
end